# poker-ranking-service

./: .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml  setup.cfg
poker/: api.py  constants.py  models.py
poker/rank/: __init__.py  descriptions.py  hands.py
poker/utils/: enum.py
tests/: conftest.py  test_api.py  test_models.py  test_poker.py  test_rank.py
tests/utils/: test_enum.py
