[tool.poetry]
name = "poker"
version = "0.1.0"
description = "Single poker hand ranking service."
authors = ["Paul Harrison"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
